[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpdv-toolbox"
version = "0.1.0"
description = "Toolkit for processing and visualization of multipoint PDV data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "h5py",
  "scikit-image",
  "xarray",
  "tqdm",
  "ipykernel"
]

[project.optional-dependencies]
dev = ["pytest", "jupyterlab", "ruff"]

[project.scripts]
mpdv-toolbox = "mpdv_toolbox.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
